--- a/src/App.css
+++ b/src/App.css
@@ -2,27 +2,23 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
 .stacked-section {
   position: relative;
 }
 
 .bg-image {
   width: 100%;
-  max-height: 100vh;
+  max-height: fit-content;
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1; /* Atur nilai z-index yang lebih tinggi dari elemen lainnya */
+  z-index: 1; 
 }
 
 .video-container {
   position: relative;
-  z-index: 0; /* Atur nilai z-index yang lebih rendah dari elemen lainnya */
+  overflow: hidden;
+  z-index: 0; 
 }
 
 
