--- a/src/App.css
+++ b/src/App.css
@@ -2,25 +2,23 @@
   text-align: center;
 }
 
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
 .stacked-section {
   position: relative;
 }
 
 .bg-image {
   width: 100%;
-  max-height: fit-content;
+  max-height: 100vh;
   position: absolute;
   top: 0;
   left: 0;
   z-index: 1; 
 }
-
-.video-container {
-  position: relative;
-  overflow: hidden;
-  z-index: 0; 
-}
-
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -50,4 +48,38 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.liveView p {
+  position: absolute;
+}
+
+.highlighter {
+  position: absolute;
+  background: rgba(0, 255, 0, 0.25);
+  border: 1px dashed #fff;
+  z-index: 1;
+}
+
+.key-point {
+  position: absolute;
+  z-index: 1;
+  width: 3px;
+  height: 3px;
+  background-color: #ff0000;
+  /* border: 1px solid #ffffff; */
+  border-radius: 50%;
+  display: block;
+}
+
+video {
+  clear: both;
+  display: block;
+  /* transform: rotateY(180deg); */
+  /* -webkit-transform: rotateY(180deg); */
+  /* -moz-transform: rotateY(180deg); */
+  transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+  -moz-transform: scaleX(-1);
 }
