--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+body {
+  background: #181929;
+}
 .App {
   text-align: center;
 }
@@ -18,6 +21,23 @@
   top: 0;
   left: 0;
   z-index: 1; 
+}
+
+.video-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; 
+}
+
+.overlay-text {
+  position: absolute;
+  font-size: 20px;
+  font-weight: bold;
+  left: 50%;
+  transform: translateX(-50%);
+  color: white;
+  z-index: 999;
 }
 
 @media (prefers-reduced-motion: no-preference) {
