update UI web Device

--- a/src/App.css
+++ b/src/App.css
@@ -17,20 +17,12 @@ body {
 .bg-image {
   width: 100%;
   max-height: 100vh;
+  max-width: 300px;
   position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1; 
-}
-
-.overlay-text {
-  position: absolute;
-  font-size: 20px;
-  font-weight: bold;
+  top: 50%;
   left: 50%;
-  transform: translateX(-50%);
-  color: white;
-  z-index: 999;
+  transform: translate(-50%, -50%);
+  z-index: 1;
 }
 
 @media (prefers-reduced-motion: no-preference) {
