--- a/src/App.css
+++ b/src/App.css
@@ -28,8 +28,7 @@ body {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  width: 450px;
-  height: 450px;
+  width: 100%;
   z-index: 1;
 }
 
