--- a/src/App.css
+++ b/src/App.css
@@ -57,11 +57,11 @@ body {
   }
 }
 
-video {
+/* video {
   transform: scaleX(-1);
   -webkit-transform: scaleX(-1);
   -moz-transform: scaleX(-1);
-}
+} */
 
 /* Style the modal content */
 .modal-content {
