--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,12 @@ body {
   -moz-transform: scaleX(-1);
 } */
 
+.video-face {
+  transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+  -moz-transform: scaleX(-1);
+}
+
 /* Style the modal content */
 .modal-content {
   background-color: #fefefe;
