--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background: #0000;
+  background: linear-gradient(262.22deg, #002E5E 22.04%, #2D5988 69.46%);
 }
 .App {
   text-align: center;
@@ -81,3 +81,41 @@ body {
   position: relative; /* Relative positioning for close button */
   border-radius: 20px;
 }
+
+.circle-button {
+  width: 100px; 
+  height: 100px; 
+  border-radius: 50%; 
+  background-color: transparent; 
+  border: 2px solid #ffff; 
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.circle-button:hover {
+  background-color: gray; 
+}
+
+.next-button {
+  border-radius: 10px;
+  background: linear-gradient(262.22deg, #002E5E 22.04%, #2D5988 69.46%);
+  color: #ffff;
+  border: 2px solid #dedede;
+  padding: 15px;
+  font-size: 20px;
+  width: 70%;
+  cursor: pointer;
+}
+
+.next-button:hover {
+  background: #ffff; 
+  color: #2D5988;
+  border: 2px solid #2D5988;
+}
+
+.bg-ktp-result {
+  background: #ffff;
+  border-radius: 10px;
+}
+
