--- a/src/App.css
+++ b/src/App.css
@@ -98,14 +98,19 @@ body {
 }
 
 .next-button {
-  border-radius: 10px;
-  background: linear-gradient(262.22deg, #002E5E 22.04%, #2D5988 69.46%);
+  border-radius: 30px;
+  background: linear-gradient(262deg, #002E5E 0%, #2D5988 100%);
+  box-shadow: 0px 18px 30px -10px rgba(0, 46, 94, 0.25);
+  border: transparent;
   color: #ffff;
-  border: 2px solid #dedede;
   padding: 15px;
   font-size: 20px;
+  font-weight: 400;
   width: 90%;
   cursor: pointer;
+  display: inline-flex;
+  justify-content: center;
+  letter-spacing: 1px;
 }
 
 .next-button:hover {
@@ -115,7 +120,7 @@ body {
 }
 
 .cancel-button {
-  border-radius: 10px;
+  border-radius: 30px;
   background: #ffff;
   color: #002e5e;
   border: 2px solid #002e5e;
@@ -123,6 +128,7 @@ body {
   font-size: 20px;
   width: 90%;
   cursor: pointer;
+  box-shadow: 0px 10px 20px #C2C1C3;
 }
 
 .cancel-button:hover {
