--- a/src/App.css
+++ b/src/App.css
@@ -16,10 +16,11 @@ body {
 
 .bg-image {
   width: 100%;
-  max-height: 80vh;
+  /* max-height: 80vh; */
   position: absolute;
   top: 0;
   left: 0;
+  bottom: 0;
   z-index: 1; 
 }
 /* 
