--- a/src/App.css
+++ b/src/App.css
@@ -112,6 +112,7 @@ body {
   display: inline-flex;
   justify-content: center;
   letter-spacing: 1px;
+  align-items: center;
 }
 
 .next-button:hover {
