--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 body {
   background: linear-gradient(262.22deg, #002E5E 22.04%, #2D5988 69.46%);
 }
+html {
+  background: #000000;
+}
 .App {
   text-align: center;
 }
@@ -150,4 +153,19 @@ body {
   background: #ffff;
   border-radius: 40px 40px 0px 0px;
 }
+
+.webcam-video {
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); 
+  width: 100%;
+  height: 70vh;
+}
+
+
+
 
