update UI camera

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-/* body {
+body {
   background: #000000;
-} */
+}
 
 .webcam-container {
   background: linear-gradient(262.22deg, #002E5E 22.04%, #2D5988 69.46%);
